# ml-hand-gesture-backend

./: .flake8  .gitignore  .pylintrc  AGENTS.md  APP_GUIDE.md  AWS-Deploy.md  DEPLOYMENT.md  DEPLOYMENT_GCP_NETLIFY.md  LOCAL_DEV_GUIDE.md  README.md  SENDGRID_SETUP.md  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  index.html  js.pyi  main.py  pyproject.toml  pyscript.toml  server.py  verify_theme.py
.agents/rules/: use-bun.md
.github/workflows/: deploy.yml
backend/: Dockerfile  add_public_columns.py  app.db  auth.py  database.py  email_utils.py  main.py  models.py  requirements.txt
css/: styles.css
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/.agent/workflows/: build.md
frontend/src/: App.jsx  config.js  main.jsx
frontend/src/hooks/: useAudioEngine.js  useAuth.js  useBLE.js  useClassManager.js  useHandDetection.js  useModelTrainer.js  usePredictionManager.js  useSerial.js  useSessionStorage.js  useSpikeDevice.js  useStorageManager.js
frontend/src/theme/: gruvbox.css  theme.css
frontend/src/utils/: helpers.js  mediapipe.js  spike3Protocol.js  (+1 more)
js/: app.js  ble.js  classManager.js  handDetection.js  modelTrainer.js  motorGroupController.js  notesController.js  outputManager.js  piano-player.js  predictionManager.js  storageManager.js  ui.js
next-front-end/: INTEGRATION.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
next-front-end/app/: layout.tsx  page.tsx
next-front-end/hooks/: use-pyscript.ts
next-front-end/types/: mediapipe.d.ts
(+64 files in other folders)
